# TCC-CEDS-CAUSAL-AI

./: Makefile  README.md  pyproject.toml
app/: features.py  plots.py
app/modeling/: predict.py
notebooks/data_analysis/: EDA.ipynb  EDA_processed_dataset.ipynb  causal_model_00_eda.ipynb  causal_model_01_eda_v2.ipynb
notebooks/modeling/: 01_causal_model_nb.ipynb  01_dag_building.ipynb  02_causal_model_analysis.ipynb  causal_model.ipynb  causal_model_02.ipynb  causal_model_03.ipynb  causal_model_04.ipynb  causal_model_05_iptw.ipynb  causal_model_06_iptw.ipynb  causal_model_07_iptw_corrigido.ipynb  causal_model_07_iptw_corrigido2.ipynb  causal_model_08_contrafactual.ipynb  causal_model_09_dag.ipynb  causal_model_10_iptw_v2.ipynb  causal_model_11_dag_v2.ipynb  causal_model_12_dag.ipynb  causal_model_final.ipynb  causal_model_final_v2 copy.ipynb  causal_model_final_v2.ipynb
src/app/: dataset.py
src/app/config/: settings.py
src/app/data/: __init__.py  basic_process.py  builders.py  features.yaml  utils.py
src/app/features/: build_features.py
src/app/modeling/: train.py
src/app/utils/: aux_functions.py  report_functions.py  transformers.py
