[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "app"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Leonardo Colussi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "pip",
    "python-dotenv",
    "tqdm",
    "typer",
    "ipykernel",
    "pandas (>=3.0.1,<4.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]
requires-python = ">=3.11,<3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
known_first_party = ["app"]
force_sort_within_sections = true


